# ambari-deploy

./: .gitignore  README.md  pyproject.toml  setup_pypath.sh
conf/: .gitignore  base_conf.yml.template  conf.yml.template  hosts_info.yml.template
deploy_ansible/ansible-scripts/: ansible.cfg
deploy_ansible/ansible-scripts/inventory/: .gitignore
deploy_ansible/ansible-scripts/playbooks/: apply_blueprint.yml  configure_ambari.yml  install_ambari.yml  post_install.yml  prepare_nodes.yml  set_variables.yml
deploy_ansible/ansible-scripts/playbooks/group_vars/: .gitignore
deploy_ansible/ansible-scripts/playbooks/roles/ambari-blueprint/files/: .gitignore
deploy_ansible/ansible-scripts/playbooks/roles/ambari-blueprint/tasks/: main.yml
deploy_ansible/ansible-scripts/playbooks/roles/ambari-blueprint/vars/: debian-ubuntu-22.yml  redhat-7.yml  redhat-8.yml  rocky-9.yml
deploy_py/: main.py
deploy_py/python/common/: basic_logger.py  constants.py  path_manager.py
deploy_py/python/config_management/: conf_validator.py  configuration_loader.py  configuration_manager.py  default_configuration_loader.py  dynamic_variable_generator.py  file_manager.py  group_consistency_validator.py  hosts_info_parser.py  hosts_info_validator.py  parser_factory.py  parsers.py  service_manager.py  service_map.py  service_validator.py  template_renderer.py  topology_manager.py  topology_validator.py  validation_manager.py  validator.py
deploy_py/python/config_management/configurations/: __init__.py  advanced_configuration.py  ambari_blueprint_configuration.py  ambari_cluster_template_configuration.py  ansible_host_configuration.py  ansible_var_configuration.py  base_configuration.py  ci_configuration.py  hosts_info_configuration.py  standard_configuration.py
deploy_py/python/deploy/: deployment.py  docker_cluster_manager.py
deploy_py/python/exceptions/: invalid_configuration_exception.py
deploy_py/python/executor/: command_executor.py
deploy_py/python/utils/: filesystem_util.py  os_utils.py
deploy_py/resources/cluster_templates/: alluxio_configuration.json.j2  ambari_metrics_configuration.json.j2  base_blueprint.json.j2  hbase_configuration.json.j2  hdfs_configuration.json.j2  hive_configuration.json.j2  infra_solr_configuration.json.j2  kafka_configuration.json.j2  kerberos_configuration.json.j2  ranger_configuration.json.j2  ranger_kms_configuration.json.j2  spark_configuration.json.j2  tez_configuration.json.j2  yarn_configuration.json.j2  zookeeper_configuration.json.j2
deploy_py/resources/templates/: apache2.conf.tpl  httpd.conf.tpl
deploy_py/shell/utils/: install_cluster.sh  setup-env-centos.sh  setup-env-ubuntu.sh  setup_repo.sh  sshd_config_template  systemctl.py  systemctl3.py  update_bigtop_image.sh
docs/: CODE_ARCHITECTURE.md  PROJECT_OVERVIEW.md  TECHNICAL_ARCHITECTURE.md  advanced-deployment.md  automated-deployment.md
(+50 files in other folders)
